syntax = "proto3";

option csharp_namespace = "ApplicationsApi.Proto";
option go_package = "./protostudyplaces";

service StudyPlaces {
  rpc GetByID(IdRequest) returns (StudyPlace) {}
}

message IdRequest {
  string id = 2;
}

message StudyPlace {
  string id = 1;
  string name = 2;
  bool restricted = 3;
}
